--- a/src/main/resources/com/example/solarfx/login.fxml
+++ b/src/main/resources/com/example/solarfx/login.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.solarfx.Login"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.solarfx.controllers.LoginController">
+   <children>
+      <TextField fx:id="usernameField" layoutX="182.0" layoutY="139.0" prefHeight="25.0" prefWidth="236.0" />
+      <TextField fx:id="passwordField" layoutX="182.0" layoutY="188.0" prefHeight="25.0" prefWidth="236.0" />
+      <Button fx:id="submitButton" layoutX="182.0" layoutY="233.0" mnemonicParsing="false" onAction="#handleLoginButtonAction" prefHeight="25.0" prefWidth="236.0" text="Button" />
+      <Label fx:id="errorLabel" layoutX="182.0" layoutY="276.0" prefHeight="17.0" prefWidth="236.0" text="Label" />
+   </children>
 </AnchorPane>
