--- a/src/main/resources/com/example/solarfx/login.fxml
+++ b/src/main/resources/com/example/solarfx/login.fxml
@@ -3,11 +3,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="390.0" prefWidth="608.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.solarfx.LoginController">
+<AnchorPane prefHeight="500" prefWidth="700.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.solarfx.controllers.LoginController">
    <children>
-      <TextField fx:id="usernameField" layoutX="182.0" layoutY="139.0" prefHeight="25.0" prefWidth="236.0" />
-      <TextField fx:id="passwordField" layoutX="182.0" layoutY="188.0" prefHeight="25.0" prefWidth="236.0" />
-      <Button fx:id="submitButton" layoutX="182.0" layoutY="233.0" mnemonicParsing="false" onAction="#handleLoginButtonAction" prefHeight="25.0" prefWidth="236.0" text="Button" />
-      <Label fx:id="errorLabel" layoutX="182.0" layoutY="276.0" prefHeight="17.0" prefWidth="236.0" text="Label" />
+      <TextField fx:id="usernameField" layoutX="232.0" layoutY="173.0" prefHeight="25.0" prefWidth="236.0" />
+      <TextField fx:id="passwordField" layoutX="232.0" layoutY="222.0" prefHeight="25.0" prefWidth="236.0" />
+      <Button fx:id="submitButton" layoutX="232.0" layoutY="267.0" mnemonicParsing="false" onAction="#handleLoginButtonAction" prefHeight="25.0" prefWidth="236.0" text="Login" />
+      <Label fx:id="errorLabel" layoutX="232.0" layoutY="310.0" prefHeight="17.0" prefWidth="236.0" />
+      <Label layoutX="232.0" layoutY="156.0" text="Username" />
+      <Label layoutX="232.0" layoutY="205.0" text="Password" />
    </children>
 </AnchorPane>
