--- a/src/main/resources/com/example/solarfx/adviseur.fxml
+++ b/src/main/resources/com/example/solarfx/adviseur.fxml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.solarfx.controllers.AdviseurController"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.solarfx.controllers.AdviseurController">
 
     <fx:include source="header.fxml" />
+
+    <ComboBox fx:id="customers" layoutX="14.0" layoutY="59.0" prefHeight="25.0" prefWidth="172.0" />
+    <Label layoutX="14.0" layoutY="42.0" prefHeight="17.0" prefWidth="62.0" text="Customer" />
+    <TextField layoutX="14.0" layoutY="111.0" />
+    <Label layoutX="14.0" layoutY="94.0" prefHeight="17.0" prefWidth="166.0" text="Yearly engery usage watts" />
+    <TextField layoutX="14.0" layoutY="168.0" />
+    <Label layoutX="14.0" layoutY="151.0" text="Roofsurface" />
 </AnchorPane>
