--- a/src/main/resources/com/example/solarfx/adviseur.fxml
+++ b/src/main/resources/com/example/solarfx/adviseur.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.solarfx.controllers.AdviseurController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.solarfx.controllers.AdviseurController">
 
     <fx:include source="header.fxml" />
 
@@ -16,13 +16,15 @@
     <Label layoutX="14.0" layoutY="151.0" text="Roofsurface" />
     <TextField fx:id="roofSurface" layoutX="14.0" layoutY="168.0" prefHeight="25.0" prefWidth="172.0" />
 
-     <CheckBox layoutX="14.0" layoutY="211.0" mnemonicParsing="false" text="3 phase needed" />
+    <CheckBox layoutX="14.0" layoutY="211.0" mnemonicParsing="false" text="3 phase needed" />
 
     <Label layoutX="14.0" layoutY="246.0" text="Yield loss" />
     <TextField fx:id="yieldLoss" layoutX="14.0" layoutY="263.0" prefHeight="25.0" prefWidth="172.0" />
 
     <Label layoutX="14.0" layoutY="301.0" text="Add panels" />
     <ChoiceBox fx:id="panels" layoutX="14.0" layoutY="318.0" prefHeight="25.0" prefWidth="172.0" />
-   <ListView layoutX="250.0" layoutY="60.0" prefHeight="285.0" prefWidth="407.0" />
+    
+    <Button layoutX="14.0" layoutY="361.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="172.0" text="submit" />
 
+    <ListView layoutX="250.0" layoutY="60.0" prefHeight="326.0" prefWidth="407.0" />
 </AnchorPane>
