--- a/src/main/resources/com/example/solarfx/adviseur/new-quotation.fxml
+++ b/src/main/resources/com/example/solarfx/adviseur/new-quotation.fxml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.solarfx.controllers.AdviseurController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.solarfx.controllers.adviseur.NewQuotationController">
 
     <fx:include source="../header.fxml" />
 
@@ -24,7 +30,9 @@
     <Label layoutX="14.0" layoutY="365.0" text="Add panels" />
     <ChoiceBox fx:id="panels" layoutX="14.0" layoutY="382.0" prefHeight="25.0" prefWidth="172.0" />
     
-    <Button layoutX="15.0" layoutY="441.0" mnemonicParsing="false" onAction="#createQuotation" prefHeight="25.0" prefWidth="667.0" text="submit" />
+    <Button fx:id="submit" layoutX="15.0" layoutY="441.0" mnemonicParsing="false" onAction="#createQuotation" prefHeight="25.0" prefWidth="172.0" text="submit" />
 
     <ListView layoutX="250.0" layoutY="60.0" prefHeight="346.0" prefWidth="430.0" />
+
+   <Button fx:id="back" onAction="#setOverviewScreen" layoutX="534.0" layoutY="441.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="146.0" text="Back to overview" />
 </AnchorPane>
