--- a/src/main/resources/com/example/solarfx/inkoop/new-panel.fxml
+++ b/src/main/resources/com/example/solarfx/inkoop/new-panel.fxml
@@ -2,4 +2,4 @@
 
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.solarfx.controllers.InkoopController" />
+<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.solarfx.controllers.inkoop.InkoopController" />
