--- a/src/main/resources/com/example/solarfx/adviseur/new-quotation.fxml
+++ b/src/main/resources/com/example/solarfx/adviseur/new-quotation.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -14,25 +13,25 @@
     <fx:include source="../header.fxml" />
 
     <Label layoutX="15.0" layoutY="51.0" prefHeight="17.0" prefWidth="62.0" text="Customer" />
-    <ComboBox fx:id="customer" layoutX="14.0" layoutY="68.0" prefHeight="25.0" prefWidth="172.0" />
+    <ComboBox fx:id="customers" layoutX="14.0" layoutY="68.0" prefHeight="25.0" prefWidth="172.0" />
 
-    <Label layoutX="14.0" layoutY="118.0" prefHeight="17.0" prefWidth="166.0" text="Yearly engery usage watts" />
+    <Label layoutX="14.0" layoutY="118.0" prefHeight="17.0" prefWidth="166.0" text="Yearly engery usage in watts" />
     <TextField fx:id="yearlyEnergyUsage" layoutX="14.0" layoutY="135.0" prefHeight="25.0" prefWidth="172.0" />
 
-    <Label layoutX="14.0" layoutY="190.0" text="Roofsurface" />
+    <Label layoutX="14.0" layoutY="190.0" text="Roofsurface in m2" />
     <TextField fx:id="roofSurface" layoutX="14.0" layoutY="207.0" prefHeight="25.0" prefWidth="172.0" />
 
-    <CheckBox layoutX="21.0" layoutY="257.0" mnemonicParsing="false" text="3 phase needed" />
+    <CheckBox fx:id="threePhaseNeeded" layoutX="21.0" layoutY="257.0" mnemonicParsing="false" text="3 phase needed" />
 
     <Label layoutX="14.0" layoutY="298.0" text="Yield loss" />
     <TextField fx:id="yieldLoss" layoutX="14.0" layoutY="315.0" prefHeight="25.0" prefWidth="172.0" />
 
     <Label layoutX="14.0" layoutY="365.0" text="Add panels" />
-    <ChoiceBox fx:id="panels" layoutX="14.0" layoutY="382.0" prefHeight="25.0" prefWidth="172.0" />
+    <ComboBox fx:id="panels" layoutX="14.0" layoutY="382.0" prefHeight="25.0" prefWidth="172.0" />
     
     <Button fx:id="submit" layoutX="15.0" layoutY="441.0" mnemonicParsing="false" onAction="#createQuotation" prefHeight="25.0" prefWidth="172.0" text="submit" />
 
     <ListView layoutX="250.0" layoutY="60.0" prefHeight="346.0" prefWidth="430.0" />
 
-   <Button fx:id="back" onAction="#setOverviewScreen" layoutX="534.0" layoutY="441.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="146.0" text="Back to overview" />
+    <Button fx:id="back" onAction="#setOverviewScreen" layoutX="534.0" layoutY="441.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="146.0" text="Back to overview" />
 </AnchorPane>
