--- a/src/main/resources/com/example/solarfx/adviseur/quotation-detail.fxml
+++ b/src/main/resources/com/example/solarfx/adviseur/quotation-detail.fxml
@@ -8,7 +8,8 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.solarfx.controllers.inkoop.PurchaseOverviewController"
-            prefHeight="400.0" prefWidth="600.0">
+            fx:controller="com.example.solarfx.controllers.adviseur.QuotationDetailController"
+            prefHeight="500.0" prefWidth="700.0">
+
 
 </AnchorPane>
