--- a/src/main/resources/com/example/solarfx/adviseur/quotation-overview.fxml
+++ b/src/main/resources/com/example/solarfx/adviseur/quotation-overview.fxml
@@ -3,8 +3,15 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.solarfx.controllers.adviseur.QuotationOverviewController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.solarfx.controllers.adviseur.QuotationOverviewController">
 
     <fx:include source="../header.fxml" />
-   <Button fx:id="newQuotation" layoutX="35.0" layoutY="47.0" mnemonicParsing="false" onAction="#setNewQuotationScene" prefHeight="25.0" prefWidth="117.0" text="new quotation" />
+    <Button fx:id="newQuotation" layoutX="35.0" layoutY="47.0" mnemonicParsing="false" onAction="#setNewQuotationScene" prefHeight="25.0" prefWidth="117.0" text="new quotation" />
+    <TableView fx:id="quotationTable" layoutX="35.0" layoutY="102.0" prefHeight="363.0" prefWidth="629.0">
+        <columns>
+            <TableColumn fx:id="customerColumn" prefWidth="269.0" text="Customer Name" />
+        </columns>
+    </TableView>
+   <Label fx:id="quotationsAmount" layoutX="175.0" layoutY="51.0" prefHeight="17.0" prefWidth="94.0" text="Label" />
+
 </AnchorPane>
