--- a/src/main/resources/com/example/solarfx/installeur/installeur-overview.fxml
+++ b/src/main/resources/com/example/solarfx/installeur/installeur-overview.fxml
@@ -11,4 +11,6 @@
             fx:controller="com.example.solarfx.controllers.installeur.InstalleurController"
             prefHeight="500.0" prefWidth="700.0">
 
+    <fx:include source="../header.fxml" />
+    
 </AnchorPane>
